// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quizHelper getBlankQuest should return blank 1`] = `
Object {
  "category": "",
  "choice_0": "",
  "choice_1": "",
  "choice_2": "",
  "open": true,
  "question": "",
  "subject": "",
}
`;

exports[`quizHelper getFloatingLabelText should return floating label text 1`] = `"Subject"`;

exports[`quizHelper getFloatingLabelText should return floating label text 2`] = `"Category"`;

exports[`quizHelper getFloatingLabelText should return floating label text 3`] = `"Question"`;

exports[`quizHelper getFloatingLabelText should return floating label text 4`] = `"Choice 1 (correct answer)"`;

exports[`quizHelper getFloatingLabelText should return floating label text 5`] = `"Choice 2"`;

exports[`quizHelper getFloatingLabelText should return floating label text 6`] = `"Choice 3"`;

exports[`quizHelper getFloatingLabelText should return floating label text 7`] = `""`;

exports[`quizHelper getQuestFromProps should return blank if quest is undefined 1`] = `Object {}`;

exports[`quizHelper getQuestFromProps should return new object 1`] = `
Object {
  "category": "category",
  "choice_0": "c0",
  "choice_1": "c1",
  "choice_2": "c2",
  "question": "question",
  "subject": "subject",
}
`;

exports[`quizHelper getQuizStatefromQuest should return state with blank if quest is new object 1`] = `
Object {
  "category": "",
  "choice_0": "",
  "choice_1": "",
  "choice_2": "",
  "isEditing": Object {
    "category": false,
    "choice_0": false,
    "choice_1": false,
    "choice_2": false,
    "question": false,
    "subject": false,
  },
  "open": false,
  "question": "",
  "subject": "",
}
`;

exports[`quizHelper getQuizStatefromQuest should return state with data 1`] = `
Object {
  "category": "category",
  "choice_0": "c0",
  "choice_1": "c1",
  "choice_2": "c2",
  "isEditing": Object {
    "category": false,
    "choice_0": false,
    "choice_1": false,
    "choice_2": false,
    "question": false,
    "subject": false,
  },
  "open": false,
  "question": "question",
  "subject": "subject",
}
`;
